[gd_scene load_steps=20 format=2]

[ext_resource path="res://Abilities.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/CarriedItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]
[ext_resource path="res://scripts/entity/LevelEndTrigger.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Pickup.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/placeholder_texture.png" type="Texture" id=11]
[ext_resource path="res://tilemap.gd" type="Script" id=12]
[ext_resource path="res://assets/placeholder_texture_3.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 30 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=4]
0/name = "placeholder_texture.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
2/name = "placeholder_texture_3.png 2"
2/texture = ExtResource( 13 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 128, 128 )
2/tile_mode = 1
2/autotile/bitmask_mode = 0
2/autotile/bitmask_flags = [  ]
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 32, 32 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 9 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="root" type="Node2D"]
script = ExtResource( 5 )

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 852, 227 )
current = true

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 852, 227 )
collision_mask = 13

[node name="HUD" parent="Player" instance=ExtResource( 2 )]

[node name="Abilities" type="Node2D" parent="Player"]
position = Vector2( -852, -227 )
script = ExtResource( 1 )

[node name="CarriedItem" parent="Player" instance=ExtResource( 4 )]
position = Vector2( 25, 0 )

[node name="current" type="Node2D" parent="."]

[node name="LevelEndTrigger" type="Area2D" parent="current"]
position = Vector2( 142, 293 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="current/LevelEndTrigger"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="current/LevelEndTrigger"]
frames = SubResource( 3 )

[node name="Node2D" parent="current" instance=ExtResource( 10 )]
position = Vector2( 593, 312 )
collision_layer = 16
collision_mask = 2

[node name="Node2D2" parent="current" instance=ExtResource( 10 )]
position = Vector2( 401, 256 )
collision_layer = 16
collision_mask = 2
pickup_id = 2

[node name="Label" type="Label" parent="current"]
margin_left = 505.0
margin_top = 240.0
margin_right = 545.0
margin_bottom = 254.0
text = "This is... the present!"

[node name="TileMap" type="TileMap" parent="current"]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
show_collision = true
centered_textures = true
collision_mask = 15
format = 1
tile_data = PoolIntArray( 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 65536, 2, 0, 65584, 0, 0, 131072, 2, 0, 131120, 0, 0, 196608, 2, 0, 196656, 0, 0, 262144, 2, 0, 262192, 0, 0, 327680, 2, 0, 327728, 0, 0, 393216, 2, 0, 393264, 0, 0, 458752, 2, 0, 458790, 1, 0, 458792, 0, 0, 458793, 0, 0, 458797, 1, 0, 458800, 0, 0, 524288, 2, 0, 524326, 1, 0, 524327, 0, 0, 524328, 0, 0, 524333, 1, 0, 524336, 0, 0, 589824, 2, 0, 589862, 1, 0, 589863, 0, 0, 589869, 1, 0, 589872, 0, 0, 655360, 2, 0, 655398, 1, 0, 655399, 0, 0, 655405, 1, 0, 655408, 0, 0, 720896, 2, 0, 720932, 1, 0, 720933, 1, 0, 720934, 1, 0, 720935, 0, 0, 720936, 1, 0, 720937, 1, 0, 720938, 1, 0, 720939, 1, 0, 720940, 1, 0, 720941, 1, 0, 720942, 1, 0, 720943, 1, 0, 720944, 0, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 786452, 2, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 2, 0, 786457, 2, 0, 786458, 2, 0, 786459, 2, 0, 786460, 2, 0, 786461, 2, 0, 786462, 2, 0, 786463, 2, 0, 786464, 2, 0, 786468, 0, 0, 786469, 0, 0, 786470, 0, 0, 786471, 0, 0, 786472, 0, 0, 786473, 0, 0, 786474, 0, 0, 786475, 0, 0, 786476, 0, 0, 786477, 0, 0, 786478, 0, 0, 786479, 0, 0, 786480, 0, 0, 852000, 2, 0, 852004, 0, 0, 917536, 2, 0, 917540, 0, 0, 983072, 2, 0, 983073, 0, 0, 983076, 0, 0, 1048597, 2, 0, 1048598, 2, 0, 1048599, 2, 0, 1048600, 2, 0, 1048601, 2, 0, 1048602, 2, 0, 1048603, 2, 0, 1048604, 2, 0, 1048605, 2, 0, 1048606, 2, 0, 1048607, 2, 0, 1048608, 2, 0, 1048612, 0, 0, 1114140, 0, 0, 1114148, 0, 0, 1179677, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1310756, 0, 0, 1376288, 0, 0, 1376292, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441828, 0, 0 )
script = ExtResource( 12 )

[node name="past" type="Node2D" parent="."]
position = Vector2( 0, 8192 )

[node name="LevelEndTrigger" type="Area2D" parent="past"]
position = Vector2( 703, 472 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="past/LevelEndTrigger"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="past/LevelEndTrigger"]
frames = SubResource( 3 )

[node name="Node2D" parent="past" instance=ExtResource( 10 )]
position = Vector2( 593, 312 )
collision_layer = 16
collision_mask = 2

[node name="Node2D2" parent="past" instance=ExtResource( 10 )]
position = Vector2( 401, 256 )
collision_layer = 16
collision_mask = 2
pickup_id = 2

[node name="Label" type="Label" parent="past"]
margin_left = 505.0
margin_top = 240.0
margin_right = 545.0
margin_bottom = 254.0
text = "This is... the past!"

[node name="TileMap" type="TileMap" parent="past"]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
show_collision = true
centered_textures = true
collision_mask = 15
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 65536, 0, 0, 65584, 0, 0, 131072, 0, 0, 131120, 0, 0, 196608, 0, 0, 196656, 0, 0, 262144, 0, 0, 262192, 0, 0, 327680, 0, 0, 327728, 0, 0, 393216, 0, 0, 393264, 0, 0, 458752, 0, 0, 458790, 1, 0, 458797, 1, 0, 458800, 0, 0, 524288, 0, 0, 524326, 1, 0, 524333, 1, 0, 524336, 0, 0, 589824, 0, 0, 589862, 1, 0, 589869, 1, 0, 589872, 0, 0, 655360, 0, 0, 655398, 1, 0, 655405, 1, 0, 655408, 0, 0, 720896, 0, 0, 720932, 1, 0, 720933, 1, 0, 720934, 1, 0, 720935, 1, 0, 720936, 1, 0, 720937, 1, 0, 720938, 1, 0, 720939, 1, 0, 720940, 1, 0, 720941, 1, 0, 720942, 1, 0, 720943, 1, 0, 720944, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786468, 0, 0, 786469, 0, 0, 786470, 0, 0, 786471, 0, 0, 786472, 0, 0, 786473, 0, 0, 786474, 0, 0, 786475, 0, 0, 786476, 0, 0, 786477, 0, 0, 786478, 0, 0, 786479, 0, 0, 786480, 0, 0, 852000, 0, 0, 852004, 0, 0, 917536, 0, 0, 917540, 0, 0, 983072, 0, 0, 983073, 0, 0, 983076, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048612, 0, 0, 1114140, 0, 0, 1114148, 0, 0, 1179677, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1310756, 0, 0, 1376288, 0, 0, 1376292, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441828, 0, 0 )
script = ExtResource( 12 )

[connection signal="ability_not_ready" from="Player/Abilities" to="Player/HUD" method="_on_Abilities_ability_not_ready"]
[connection signal="ability_ready" from="Player/Abilities" to="Player/HUD" method="_on_Abilities_ability_ready"]
[connection signal="ability_start" from="Player/Abilities" to="Player/HUD" method="_on_Abilities_ability_start"]
[connection signal="ability_stop" from="Player/Abilities" to="Player/HUD" method="_on_Abilities_ability_stop"]
